kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  # type: LoadBalancer
  # type: NodePort
  # ports:
  #   - port: 80
  #     targetPort: 80
  #     nodePort: 30008
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: myapp
    tier: anything
